<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:text="@string/topbtn"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="44dp"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/left"
        android:textColor="@color/white"
        android:textSize="25dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="344dp"
        android:layout_height="100dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/checkbutton_shape"
        android:text="@string/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="344dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/checkbutton_shape"
        android:text="@string/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="344dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/checkbutton_shape"
        android:text="@string/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="344dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/checkbutton_shape"
        android:text="@string/btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</androidx.constraintlayout.widget.ConstraintLayout>