<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.bus_tip_post">

    <Button
        android:id="@+id/cancel"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="25dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/write"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/complete"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/editItem"
        android:layout_width="338dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:hint="제목을 입력하세요"
        android:textSize = "30dp"
        android:textStyle="bold"
        android:backgroundTint="#30000000"
        android:textAlignment="center"

        android:textColorHint="#95404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editItem1"
        android:layout_width="341dp"
        android:layout_height="661dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00000000"
        android:background="@android:color/transparent"
        android:hint="내용을 입력하세요."
        android:gravity="top"
        android:textColorHint="#95808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItem"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>